修复进度条BUG

--- a/data/error.html
+++ b/data/error.html
@@ -15,7 +15,7 @@
 
 <center>
 <div style="width:320px;height:320px">
-	<img  src="G:\LabView\知乎日报\image\c8177f3e6709c93db594cdf19c3df8dcd1005456.jpg" width="100%" height="100%"/>
+	<img  src="G:\LabView\知乎日报\data\c8177f3e6709c93db594cdf19c3df8dcd1005456.jpg" width="100%" height="100%"/>
 </div>
 <p><font  size="6">没有网啊，╮(╯▽╰)╭ </font></p>
 
