--- a/data/start.html
+++ b/data/start.html
@@ -12,7 +12,7 @@
 	<p><font color='black' size='25dx'>知乎日报</font></p>
 	<p>在中国，资讯类移动应用的人均阅读时长是 5 分钟，<br>而在知乎日报，这个数字是 21</p>
 	<div style="width:220px;height:120px">
-		<img  src="G:\LabView\知乎日报\image\logo.jpg" width="100%" height="100%"/>
+		<img  src="G:\LabView\知乎日报\data\logo.jpg" width="100%" height="100%"/>
 	</div>
 </center>
 
